--- a/pos.css
+++ b/pos.css
@@ -1,26 +1,25 @@
-
 h1{
-  position:fixed;
-  top:50%;
-  left:50%
-}
-h2{
-  position:fixed;
-  top:50%;
-  left:50%;
-}
-h3{
-  position: fixed;
-  left:0%;
-  top:0%;
-}
-h4{
- position:fixed;
- bottom: 0%;
- right:0%;
-}
-h5{
-  position: fixed;
-  left:0;
-  top:50%;
-}
+    position:relative;
+    top:50%;
+    left:50%;
+  }
+  h2{
+    position: relative;
+    top:50%;
+    left:50%;
+  }
+  h3{
+    position: fixed;
+    left:0%;
+    top:0%;
+  }
+  h4{
+   position:fixed;
+   bottom: 0%;
+   right:0%;
+  }
+  h5{
+    position: fixed;
+    left:0;
+    top:50%;
+  }
